--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
+#DB connection properties
+spring.datasource.url = jdbc:mysql://127.0.0.1:3307/inventory
+spring.datasource.username = root
+spring.datasource.password = heslo
+spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/inventory
-spring.datasource.username=root
-spring.datasource.password=heslo
-
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
-spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.hibernate.use-new-id-generator-mappings = false
 #spring.jpa.hibernate.ddl-auto=create-drop
+
+#file upload size control
+spring.servlet.multipart.max-file-size = 3MB
+spring.servlet.multipart.max-request-size = 3MB
