--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.</groupId>
 	<artifactId>Inventory</artifactId>
@@ -19,6 +19,8 @@
 		<java.version>1.8</java.version>
 		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
 		<hibernate-core.version>5.3.9.Final</hibernate-core.version>
+        <org.projectlombok.version>1.18.8</org.projectlombok.version>
+        <org.mariadb.jdbc.version>2.4.1</org.mariadb.jdbc.version>
 	</properties>
 
 	<dependencies>
@@ -53,7 +55,7 @@
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
-			<version>2.4.1</version>
+            <version>${org.mariadb.jdbc.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
@@ -84,14 +86,19 @@
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.6.0</version>
 			<configuration>
-				<source>1.8</source> <!-- or higher, depending on your project -->
-				<target>1.8</target> <!-- or higher, depending on your project -->
+				<source>1.8</source>
+				<target>1.8</target>
 				<annotationProcessorPaths>
 					<path>
 						<groupId>org.mapstruct</groupId>
 						<artifactId>mapstruct-processor</artifactId>
 						<version>${org.mapstruct.version}</version>
 					</path>
+                    <path>
+                        <groupId>org.projectlombok</groupId>
+                        <artifactId>lombok</artifactId>
+                        <version>${org.projectlombok.version}</version>
+                    </path>
 				</annotationProcessorPaths>
 				<compilerArgs>
 					<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
